# CG_Labs_GUAP_2018

./: .gitmodules  CMakeLists.txt  README.md
includes/: Shader.h
src/Lab1_OGLStart/: lab1.cpp
src/Lab2_lighting/: fShader.glsl  lab2.cpp  vShader.glsl
src/Lab3_moreLight/: fLamp.glsl  fShader.glsl  lab3.cpp  vShader.glsl
src/Lab4_DepthBuffer/: fShader.glsl  lab4.cpp
